# rust-automl

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: audit.yml  ci.yml  rust.yml  tests.yml
data/: breast_cancer.csv  breast_cancer_without_target.csv  diabetes.csv  diabetes_without_target.csv
examples/: breast_cancer_csv.rs  classification_save_best.rs  classification_with_demo.rs  classification_with_gui.rs  diabetes_regression.rs  maximal_classification.rs  maximal_classification_example.rs  maximal_clustering.rs  maximal_regression.rs  maximal_regression_example.rs  minimal_classification.rs  minimal_classification_example.rs  minimal_clustering.rs  minimal_regression.rs  minimal_regression_example.rs  print_settings.rs  regression.rs  regression_with_demo.rs  regression_with_gui.rs  regression_with_gui_and_csv.rs
src/: algorithms.rs  classification.rs  clustering.rs  cookbook.rs  lib.rs  main.rs  metrics.rs  regression.rs  settings.rs  supervised.rs  traits.rs  utils.rs
src/algorithms/: categorical_naive_bayes_classifier.rs  classification.rs  clustering.rs  decision_tree_classifier.rs  decision_tree_regressor.rs  elastic_net_regressor.rs  gaussian_naive_bayes_classifier.rs  knn_classifier.rs  knn_regressor.rs  lasso_regressor.rs  linear_regression.rs  linear_regressor.rs  logistic_regression.rs  mod.rs  random_forest_classifier.rs  random_forest_regressor.rs  regression.rs  ridge_regressor.rs  supervised_train.rs  support_vector_classifier.rs  support_vector_regressor.rs
src/classification/: settings.rs
src/model/: classification.rs  clustering.rs  comparison.rs  error.rs  mod.rs  preprocessing.rs  regression.rs  supervised.rs
src/regression/: settings.rs
src/settings/: algorithms.rs  classification_algorithms.rs  classification_settings.rs  clustering_settings.rs  common.rs  display.rs  error.rs  knn_classifier_parameters.rs  knn_common.rs  knn_parameters.rs  knn_regressor_parameters.rs  macros.rs  mod.rs  preprocessing.rs  regression_algorithms.rs  regression_settings.rs  settings_struct.rs  svc_parameters.rs  svr_parameters.rs
src/supervised/: settings.rs
src/supervised_model/: feature_engineering.rs  mod.rs  preprocessing.rs  training.rs
src/utils/: display.rs  distance.rs  features.rs  io.rs  kernels.rs  math.rs  mod.rs
tests/: algorithms.rs  classification.rs  clustering.rs  display.rs  distance.rs  features.rs  load_csv_features.rs  load_labeled_csv.rs  new_from_dataset.rs  preprocessing.rs  real_world_datasets.rs  regression.rs  settings_display.rs  settings_error.rs  supervised_settings.rs  utils.rs
tests/fixtures/: breast_cancer_dataset.rs  classification_data.rs  clustering_data.rs  clustering_points.csv  diabetes_dataset.rs  inconsistent_features.csv  inconsistent_labeled.csv  (+4 more)
(+2 files in other folders)
