[package]
name = "automl"
version = "0.3.1"
authors = ["Chris McComb <ccmcc2012@gmail.com>"]
description = "Automated machine learning for classification and regression"
edition = "2021"
readme = "README.md"
repository = "https://github.com/cmccomb/rust-automl"
homepage = "https://github.com/cmccomb/rust-automl"
documentation = "https://docs.rs/automl"
license = "MIT OR Apache-2.0"
keywords = ["machine-learning", "ml", "ai", "smartcore", "automl"]
categories = ["algorithms", "mathematics", "science"]

[dependencies]
smartcore = {version = "0.2.1", features=["serde"]}
serde = {version = "^1", features=["derive"]}
bincode = "^1"
itertools = "^0.14"
comfy-table = "^7"
humantime = "^2"
ndarray = {version = "^0.16", optional = true}
polars = {version = "0.17.0", features = ["ndarray"], optional = true}
url = {version = "^2", optional = true}
temp-file = {version = "0.1.6", optional = true}
csv-sniffer = { version = "^0.3", optional = true }
minreq = {version = "^2", optional = true, features = ["json-using-serde", "https"]}
serde_yaml = "^0.9"

[features]
default = []
nd = ["ndarray"]
csv = ["polars", "nd", "url", "temp-file", "minreq", "csv-sniffer"]