[package]
name = "automl"
version = "0.2.9"
authors = ["Chris McComb <ccmcc2012@gmail.com>"]
description = "Automated machine learning for classification and regression"
edition = "2024"
readme = "README.md"
repository = "https://github.com/cmccomb/rust-automl"
homepage = "https://github.com/cmccomb/rust-automl"
documentation = "https://docs.rs/automl"
license = "MIT OR Apache-2.0"
keywords = ["machine-learning", "ml", "ai", "smartcore", "automl"]
categories = ["algorithms", "mathematics", "science"]

[dependencies]
smartcore = { version = "^0.4", features = ["serde"] }
serde = { version = "^1", features = ["derive"] }
itertools = "^0.14"
comfy-table = "^7"
humantime = "^2"