[package]
name = "automl"
version = "0.2.9"
authors = ["Chris McComb <ccmcc2012@gmail.com>"]
description = "Automated machine learning for classification and regression"
edition = "2024"
readme = "README.md"
repository = "https://github.com/cmccomb/rust-automl"
homepage = "https://github.com/cmccomb/rust-automl"
documentation = "https://docs.rs/automl"
license = "MIT OR Apache-2.0"
keywords = ["machine-learning", "ml", "ai", "smartcore", "automl"]
categories = ["algorithms", "mathematics", "science"]

[dependencies]
smartcore = { version = "=0.4.2", features = ["serde"] }
serde = { version = "=1.0.220", features = ["derive"] }
itertools = "=0.14.0"
comfy-table = "=7.2.0"
humantime = "=2.2.0"
csv = "=1.3.0"
num-traits = "=0.2.19"

[dev-dependencies]
serde_json = "=1.0.145"
